Add support for topic patterns